--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,8 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "mongoose": "^8.16.1"
+  }
 }
