feat(llm): integration llm and summary

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "ComplySummarize AI",
+  "name": "ComplySummarize AI - Résumé de documents IA",
   "icons": [
     {
       "src": "favicon.ico",
